force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/Cross_Object_Fields_Sync_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Establish a sync between the 2 objects fields</description>
    <label>Cross-Object Fields Sync Mapping</label>
    <pluralLabel>Cross-Object Fields Sync Mappings</pluralLabel>
</CustomObject>