force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Destination_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>Destination_FieldAPIName__c</fullName>
    <description>FieldAPIName of the destination field</description>
    <label>Destination FieldAPIName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>