force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Destination_Object__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object__c</fullName>
    <description>Destination Object where values will be synced</description>
    <label>Destination Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>