force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Destination_Object_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object_Id_Field__c</fullName>
    <description>Field name in which destination record Id is present</description>
    <label>Destination Object Id Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>