force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Source_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>Source_FieldAPIName__c</fullName>
    <description>FieldAPIName of the source field</description>
    <label>Source FieldAPIName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>