force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>Object from where sync will start</description>
    <label>Source Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>