force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Sync_Name__c.field-meta.xml
<CustomField>
    <fullName>Sync_Name__c</fullName>
    <description>Name of the Sync</description>
    <inlineHelpText>Name of the Sync with which you will retrieve the fields to sync</inlineHelpText>
    <label>Sync Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>