force-app/main/default/objects/Cross_Object_Fields_Sync_Mapping__mdt/fields/Sync_Used_In__c.field-meta.xml
<CustomField>
    <fullName>Sync_Used_In__c</fullName>
    <description>Where is the Sync established</description>
    <label>Sync Used In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>